<resources>
    <string name="app_name">RedMuriApp</string>

    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="bt_sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="apple_icon">Apple icon</string>
    <string name="google_icon">Google icon</string>
    <string name="bt_log_in">Log in</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="button_hide_password">Button hide password</string>

    <string name="change_photo">Change photo</string>
    <string name="profile">Profile</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="upload_item">Upload item</string>
    <string name="credit_card_icon">Credit card icon</string>
    <string name="trade_store">Trade store</string>
    <string name="right_arrow">Right arrow</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="back_arrow">Back arrow</string>
    <string name="default_balance">$1593</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="restore_icon">Restore icon</string>
    <string name="question_mark">Question mark</string>
    <string name="help">Help</string>
    <string name="log_out_icon">Log out icon</string>
    <string name="log_out">Log out</string>
    <string name="default_user_name">User name</string>

    <string name="trade_by">Trade by</string>
    <string name="bata">bata</string>
    <string name="menu_icon">Menu icon</string>
    <string name="location">Location</string>
    <string name="down_arrow">Down arrow</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="plus_icon">Plus icon</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="flash_sale">Flash sale</string>

    <string name="icon_plus">Icon plus</string>
    <string name="icon_minus">Icon minus</string>
    <string name="quantity">Quantity:</string>
    <string name="color">Color:</string>
    <string name="icon_star">Icon star</string>
    <string name="icon_share">Icon share</string>
    <string name="icon_favorite">Icon favorite</string>
    <string name="item_image">Item image</string>
    <string name="brands">Brands</string>
</resources>