<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".authorization.SignInFragment">

    <TextView
        android:id="@+id/tv_title_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_600"
        android:text="@string/sign_in"
        android:textColor="@color/authorise_title"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/et_first_name"
        style="@style/AuthoriseUserField"
        android:layout_marginTop="40dp"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/et_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_sign_in"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/et_last_name"
        style="@style/AuthoriseUserField"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/et_email"
        app:layout_constraintEnd_toEndOf="@+id/et_first_name"
        app:layout_constraintStart_toStartOf="@+id/et_first_name"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

    <EditText
        android:id="@+id/et_email"
        style="@style/AuthoriseUserField"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/bt_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/et_last_name"
        app:layout_constraintStart_toStartOf="@+id/et_last_name"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name" />

    <Button
        android:id="@+id/bt_sign_in"
        style="@style/ButtonMainBlue"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:text="@string/bt_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/tv_already_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_500"
        android:text="@string/already_have_an_account"
        android:textColor="@color/authorise_user_field"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/bt_sign_in"
        app:layout_constraintTop_toBottomOf="@id/bt_sign_in" />

    <TextView
        android:id="@+id/tv_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_500"
        android:text="@string/log_in"
        android:textColor="@color/main_blue"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_already_user"
        app:layout_constraintStart_toEndOf="@+id/tv_already_user"
        app:layout_constraintTop_toTopOf="@+id/tv_already_user" />

    <ImageView
        android:id="@+id/iv_icon_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:contentDescription="@string/google_icon"
        android:src="@drawable/ic_google"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sign_in_google"
        app:layout_constraintEnd_toStartOf="@id/tv_sign_in_google"
        app:layout_constraintTop_toTopOf="@+id/tv_sign_in_google" />

    <TextView
        android:id="@+id/tv_sign_in_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_500"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bt_sign_in"
        app:layout_constraintStart_toStartOf="@+id/bt_sign_in"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <ImageView
        android:id="@+id/iv_icon_apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:contentDescription="@string/apple_icon"
        android:src="@drawable/ic_apple"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sign_in_apple"
        app:layout_constraintEnd_toStartOf="@id/tv_sign_in_apple"
        app:layout_constraintTop_toTopOf="@+id/tv_sign_in_apple" />

    <TextView
        android:id="@+id/tv_sign_in_apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_500"
        android:text="@string/sign_in_with_apple"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_sign_in_google"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <LinearLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>