<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.DetailPageFragment"
    tools:ignore="smallSP">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_photos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="9:8"
        app:layout_constraintEnd_toStartOf="@id/gl_for_vp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="5dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/back_arrow"
        android:focusable="true"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toTopOf="@+id/vp_photos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vp_photos" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_for_vp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <LinearLayout
        android:id="@+id/ll_photo_buttons"
        android:layout_width="42dp"
        android:layout_height="95dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/bg_detail_photo_buttons"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/vp_photos"
        app:layout_constraintEnd_toEndOf="@+id/vp_photos"
        app:layout_constraintStart_toEndOf="@+id/vp_photos">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/icon_favorite"
            android:src="@drawable/ic_favorite" />

        <View
            android:layout_width="12dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/black" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/icon_share"
            android:src="@drawable/ic_share" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/vp_photos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vp_photos"
        tools:listitem="@layout/rv_item_image_not_selected" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_600"
        android:text="New balance Sneakers"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_photos" />

    <TextView
        android:id="@+id/tv_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_600"
        android:text="$ 22,50"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_item_name" />

    <TextView
        android:id="@+id/tv_item_description"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_400"
        android:text="Features waterproof, fire, air resistant shoes. all changed when the country of fire attacked"
        android:textColor="#808080"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/tv_item_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/icon_star"
        android:src="@drawable/ic_star"
        app:layout_constraintStart_toStartOf="@+id/tv_item_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_description" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/poppins_600"
        android:text="3.9"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_star"
        app:layout_constraintStart_toEndOf="@+id/iv_star"
        app:layout_constraintTop_toTopOf="@+id/iv_star" />

    <TextView
        android:id="@+id/tv_reviews_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/poppins_400"
        android:text="(4000 reviews)"
        android:textColor="#808080"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/tv_rating"
        app:layout_constraintTop_toTopOf="@+id/tv_rating" />

    <TextView
        android:id="@+id/tv_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/poppins_600"
        android:text="@string/color"
        android:textColor="#737373"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/iv_star"
        app:layout_constraintTop_toBottomOf="@+id/iv_star" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_color"
        android:layout_width="46dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_color"
        app:layout_constraintTop_toBottomOf="@+id/tv_color" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_color2"
        android:layout_width="46dp"
        android:layout_height="32dp"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/cv_color"
        app:layout_constraintTop_toBottomOf="@+id/tv_color" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_color3"
        android:layout_width="46dp"
        android:layout_height="32dp"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#F44336"
        app:layout_constraintStart_toEndOf="@+id/cv_color2"
        app:layout_constraintTop_toBottomOf="@+id/tv_color" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:background="@drawable/bg_detail_bottom_panel"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/poppins_500"
            android:text="@string/quantity"
            android:textColor="#808080"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/bt_quantity_minus"
            android:layout_width="38dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_detail_quantity_buttons"
            android:contentDescription="@string/icon_minus"
            android:gravity="center"
            android:paddingHorizontal="14dp"
            android:src="@drawable/ic_quantity_minus"
            app:layout_constraintStart_toStartOf="@id/tv_quantity"
            app:layout_constraintTop_toBottomOf="@id/tv_quantity" />

        <ImageView
            android:id="@+id/bt_quantity_plus"
            android:layout_width="38dp"
            android:layout_height="22dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/bg_detail_quantity_buttons"
            android:contentDescription="@string/icon_plus"
            android:gravity="center"
            android:paddingHorizontal="14dp"
            android:src="@drawable/ic_quantity_plus"
            app:layout_constraintStart_toEndOf="@id/bt_quantity_minus"
            app:layout_constraintTop_toTopOf="@id/bt_quantity_minus" />

        <LinearLayout
            android:id="@+id/bt_add_to_cart"
            android:layout_width="170dp"
            android:layout_height="44dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="23dp"
            android:background="@drawable/bg_detail_add_to_cart_bt"
            android:gravity="center"
            android:orientation="horizontal"
            android:src="@drawable/ic_quantity_plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_bottom_item_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_600"
                android:gravity="center"
                android:text="$2500"
                android:textColor="#99A0FF"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_600"
                android:text="ADD TO CART"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>